--- a/index.html
+++ b/index.html
@@ -85,11 +85,9 @@
 					<div class="watching-item"><!--Currently Watching-->
 						<h2 class="section-heading">Currently Watching</h2>
 						<div class="tiled-list scrolling-tiled-list">
-							<!-- <a class="tile" href=""><img class="tile-image" src="" alt=""></img></a> -->														
-							<a class="tile" href="https://kitsu.io/anime/bleach-sennen-kessen-hen"><img class="tile-image" src="https://media.kitsu.io/anime/43078/poster_image/large-bf36dc3ed0097c8b8c49e064bf0eaa79.jpeg" alt="Bleach: Thousand-Year Blood War"></img></a>
+							<!-- <a class="tile" href=""><img class="tile-image" src="" alt=""></img></a> -->																					
 							<a class="tile" href="https://kitsu.io/anime/boku-no-hero-academia-6th-season"><img class="tile-image" src="https://media.kitsu.io/anime/45240/poster_image/large-4b3a4767d6ee73bd5ba48e7ffbc06f08.jpeg" alt="My Hero Academia 6"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/spy-x-family-part-2"><img class="tile-image" src="https://media.kitsu.io/anime/45619/poster_image/large-3111a2e781f3480c94ca2bf3f4ca50e9.jpeg" alt="SPY x FAMILY Part 2"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/kumicho-musume-to-sewagakari"><img class="tile-image" src="https://media.kitsu.io/anime/45133/poster_image/large-fa499c8b610e4b75e5d1c12b7e6e68a7.jpeg" alt="The Yakuza's Guide to Babysitting"></img></a>														
+							<a class="tile" href="https://kitsu.io/anime/itai-no-wa-Iya-nano-de-bougyoryoku%20ni-kyokufuri-shitai-to-omoimasu-ii"><img class="tile-image" src="https://media.kitsu.io/anime/43086/poster_image/large-908e64210af0f273a78378b617a763e3.jpeg" alt="BOFURI 2"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
 
@@ -129,24 +127,26 @@
 							<a class="tile" href="https://kitsu.io/anime/natsume-yuujinchou"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/3453/large.jpg" alt="Natsume's Book of Friends"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/saikin-yatotta-maid-ga-ayashii"><img class="tile-image" src="https://media.kitsu.io/anime/46135/poster_image/large-fe7a30271f5ff9a0351f7bc8b813095b.jpeg" alt="The Maid I Recently Hired is Mysterious"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/made-in-abyss-retsujitsu-no-ougonkyou"><img class="tile-image" src="https://media.kitsu.io/anime/42951/poster_image/large-8fd6abf81d8c4223a61bd0e4192eba04.jpeg" alt="Made in Abyss: The Golden City of the Scorching Sun"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/lycoris-recoil"><img class="tile-image" src="https://media.kitsu.io/anime/45705/poster_image/large-cc78d70c11671d2e76ce9f4cf6fa7e66.jpeg" alt="Lycoris Recoil"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/romantic-killer"><img class="tile-image" src="https://media.kitsu.io/anime/46371/poster_image/large-fe98fce40dcad5d7ddf8980fcbe7e7b0.jpeg" alt="Romantic Killer"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/lycoris-recoil"><img class="tile-image" src="https://media.kitsu.io/anime/45705/poster_image/large-cc78d70c11671d2e76ce9f4cf6fa7e66.jpeg" alt="Lycoris Recoil"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/mob-psycho-100-iii"><img class="tile-image" src="https://media.kitsu.io/anime/45338/poster_image/large-b7ba28948da84b740c9ae7882b365fb9.jpeg" alt="Mob Psycho 100 III"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/paripi-koumei"><img class="tile-image" src="https://media.kitsu.io/anime/45506/poster_image/large-0c2166dc88621c81ed6549f4327d97cd.jpeg" alt="Ya Boy Kongming!"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/chainsaw-man"><img class="tile-image" src="https://media.kitsu.io/anime/43806/poster_image/large-815d6008fb3b56f4291b9f0ffa05cd8f.jpeg" alt="Chainsaw Man"></img></a>
 						</div><!-- tiled-list -->
 
 						<h3 class="section-subheading">Waiting for Dub to Finish</h3> 
 						<div class="tiled-list scrolling-tiled-list">																										
 							<a class="tile" href="https://kitsu.io/anime/sword-art-online-progressive-movie-kuraki-yuuyami-no-scherzo"><img class="tile-image" src="https://media.kitsu.io/anime/45400/poster_image/large-0c4c1d824ad2d2aa3eedcdabc9dc48ff.jpeg" alt="Sword Art Online the Movie -Progressive- Scherzo of Deep Night"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/5-toubun-no-hanayome-movie"><img class="tile-image" src="https://media.kitsu.io/anime/44229/poster_image/large-43d280867134345ce4ad5d9b985a54ca.jpeg" alt="The Quintessential Quintuplets Movie"></img></a>																					
-							<a class="tile" href="https://kitsu.io/anime/mob-psycho-100-iii"><img class="tile-image" src="https://media.kitsu.io/anime/45338/poster_image/large-b7ba28948da84b740c9ae7882b365fb9.jpeg" alt="Mob Psycho 100 III"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/paripi-koumei"><img class="tile-image" src="https://media.kitsu.io/anime/45506/poster_image/large-0c2166dc88621c81ed6549f4327d97cd.jpeg" alt="Ya Boy Kongming!"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/akuyaku-reijou-nanode-last-boss-wo-kattemimashita"><img class="tile-image" src="https://media.kitsu.io/anime/45269/poster_image/large-717780f603d5ce876fb25b101e04a02b.jpeg" alt="I'm the Villainess, So I'm Taming the Final Boss"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/shinobi-no-ittoki"><img class="tile-image" src="https://media.kitsu.io/anime/46134/poster_image/large-084a93f401ac622667433178bebf3212.jpeg" alt="Shinobi no Ittoki"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/yuusha-party-wo-tsuihou-sareta-beast-tamer-saikyoushu-no-nekomimi-shoujo-to-deau"><img class="tile-image" src="https://media.kitsu.io/anime/46171/poster_image/large-d552de50a059fe9c13f8cc8249df4452.jpeg" alt="Beast Tamer"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/chainsaw-man"><img class="tile-image" src="https://media.kitsu.io/anime/43806/poster_image/large-815d6008fb3b56f4291b9f0ffa05cd8f.jpeg" alt="Chainsaw Man"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/koukyuu-no-karasu"><img class="tile-image" src="https://media.kitsu.io/anime/45591/poster_image/large-af831d94bbd2ab2dd2123e21d0a7fedd.jpeg" alt="Raven in the Inner Palace"></img></a>														
-							<a class="tile" href="https://kitsu.io/anime/fuufu-ijou-koibito-miman"><img class="tile-image" src="https://media.kitsu.io/anime/45521/poster_image/large-aa4976026d5b59706b89e8e6d4b2922a.jpeg" alt="More than a married couple, but not lovers"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/a-place-further-than-the-universe"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13615/large.jpg?1597696818" alt="A Place Further Than the Universe"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/karakai-jouzu-no-takagi-san-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42110/large.jpg" alt="Teasing Master Takagi-san 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kage-no-jitsuryokusha-ni-naritakute"><img class="tile-image" src="https://media.kitsu.io/anime/44107/poster_image/large-794c151bd6f09e29b21e042163127a47.jpeg" alt="The Eminence in Shadow"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/vinland-saga-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/44875/poster_image/large-c91906d83db833c1dad74f7ced0ada7b.jpeg" alt="Vinland Saga Season 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/benriya-saitou-san-isekai-ni-iku"><img class="tile-image" src="https://media.kitsu.io/anime/45788/poster_image/large-520d42927c186609e0d6c479c299cd36.jpeg" alt="Handyman Saitou In Another World"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/rougo-ni-sonaete-isekai-de-8-manmai-no-kinka-wo-tamemasu"><img class="tile-image" src="https://media.kitsu.io/anime/46304/poster_image/large-ab575b3c6fc221bc2283930b37bdc8fc.jpeg" alt="Saving 80,000 Gold in Another World for My Retirement"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/tensei-shitara-ken-deshita"><img class="tile-image" src="https://media.kitsu.io/anime/45242/poster_image/large-ce2c4912a685f66cd817732873e69da4.jpeg" alt="Reincarnated as a Sword"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/tomo-chan-wa-onna-no-ko"><img class="tile-image" src="https://media.kitsu.io/anime/46232/poster_image/large-5b8fad2fd5867754d9cb41fdc011f7df.jpeg" alt="Tomo-chan Is a Girl!"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/hyouken-no-majutsushi-ga-sekai-wo-suberu"><img class="tile-image" src="https://media.kitsu.io/anime/46088/poster_image/large-daaa5249be1061e5b4a2c7b7a78a1668.jpeg" alt="The Iceblade Sorcerer Shall Rule the World"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/sugar-apple-fairy-tale"><img class="tile-image" src="https://media.kitsu.io/anime/45270/poster_image/large-551d150b437d3c107a2d93bc7c3ca2e7.jpeg" alt="Sugar Apple Fairy Tale"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Binge Watching -->
 
@@ -154,18 +154,11 @@
 						<h2 class="section-heading">Most Anticipated</h2>				
 						<h3 class="section-subheading">Fall 2022 Dubs</h3> 
 						<div class="tiled-list scrolling-tiled-list">																							
-							<a class="tile" href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-guren-no-kizuna"><img class="tile-image" src="https://media.kitsu.io/anime/45231/poster_image/large-8c56a17eaf5e940d1cbfc949fa486718.jpeg" alt="That Time I Got Reincarnated as a Slime: Scarlet Bonds"></img></a>																					
-							<a class="tile" href="https://kitsu.io/anime/tensei-shitara-ken-deshita"><img class="tile-image" src="https://media.kitsu.io/anime/45242/poster_image/large-ce2c4912a685f66cd817732873e69da4.jpeg" alt="Reincarnated as a Sword"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/kage-no-jitsuryokusha-ni-naritakute"><img class="tile-image" src="https://media.kitsu.io/anime/44107/poster_image/large-794c151bd6f09e29b21e042163127a47.jpeg" alt="The Eminence in Shadow"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/urusei-yatsura-2022"><img class="tile-image" src="https://media.kitsu.io/anime/45694/poster_image/large-742bc195cb1e8d5bb9d1d26d88884642.jpeg" alt="Urusei Yatsura"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/uchi-no-shishou-wa-shippo-ga-nai"><img class="tile-image" src="https://media.kitsu.io/anime/44954/poster_image/large-eb2b48731dff2190290710bf2f6a0f5d.jpeg" alt="My Master Has No Tail "></img></a>
-							<a class="tile" href="https://kitsu.io/anime/renai-flops"><img class="tile-image" src="https://media.kitsu.io/anime/46002/poster_image/large-a11e2fc22909ae0a7f53b43765c95f2f.jpeg" alt="LOVE FLOPS"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/noumin-kanren-no-skill-bakka-agetetara-nazeka-tsuyoku-natta"><img class="tile-image" src="https://media.kitsu.io/anime/46270/poster_image/large-4af3670f1125b276553db587357affe6.jpeg" alt="I Somehow Became Stronger by Raising Farming-Related Skills"></img></a>
+
 						</div><!-- tiled-list -->
 						<h3 class="section-subheading">Later</h3> 
 						<div class="tiled-list scrolling-tiled-list">																																												
-							<a class="tile" href="https://kitsu.io/anime/solo-leveling"><img class="tile-image" src="https://media.kitsu.io/anime/46231/poster_image/large-ccc9ca358cc3dd829a1aadf614ca2f15.jpeg" alt="Solo Leveling"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/vinland-saga-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/44875/poster_image/large-c91906d83db833c1dad74f7ced0ada7b.jpeg" alt="Vinland Saga Season 2"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/solo-leveling"><img class="tile-image" src="https://media.kitsu.io/anime/46231/poster_image/large-ccc9ca358cc3dd829a1aadf614ca2f15.jpeg" alt="Solo Leveling"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/shingeki-no-kyojin-the-final-season-part-3"><img class="tile-image" src="https://media.kitsu.io/anime/46038/poster_image/large-1ea5c5a1d7cb07795bee8f22be9a95ef.jpeg" alt="Attack on Titan: The Final Season Part 3"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/dr-stone-three"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44289/large.jpg" alt="Dr. Stone Season 3"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/otome-game-no-hametsu-flag-shika-nai-akuyaku-reijou-ni-tensei-shiteshimatta-movie"><img class="tile-image" src="https://media.kitsu.io/anime/45213/poster_image/large-4a6caf4d478bd435ea34b60393c32dc2.jpeg" alt="My Next Life as a Villainess: All Routes Lead to Doom! Movie"></img></a>
@@ -175,13 +168,12 @@
 							<a class="tile" href="https://kitsu.io/anime/edens-zero-2"><img class="tile-image" src="https://media.kitsu.io/anime/45847/poster_image/large-60b4444bbaf919da7e0983e86eb96d36.jpeg" alt="Edens Zero 2nd Season"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45950/poster_image/large-3b800ee534ae2d1a85d15455529d85f3.jpeg" alt="Mushoku Tensei: Jobless Reincarnation Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kono-subarashii-sekai-ni-bakuen-wo"><img class="tile-image" src="https://media.kitsu.io/anime/46139/poster_image/large-e050155e49b41f49052f3da5a4e2eacb.jpeg" alt="Konosuba: An Explosion of this Wonderful World"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/black-clover-mahou-tei-no-ken"><img class="tile-image" src="https://media.kitsu.io/anime/44242/poster_image/large-6e9068f36a9f0a8e0f4dda59b4d8f8cb.jpeg" alt="Black Clover: Sword of the Wizard King"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/itai-no-wa-Iya-nano-de-bougyoryoku%20ni-kyokufuri-shitai-to-omoimasu-ii"><img class="tile-image" src="https://media.kitsu.io/anime/43086/poster_image/large-908e64210af0f273a78378b617a763e3.jpeg" alt="BOFURI 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/black-clover-mahou-tei-no-ken"><img class="tile-image" src="https://media.kitsu.io/anime/44242/poster_image/large-6e9068f36a9f0a8e0f4dda59b4d8f8cb.jpeg" alt="Black Clover: Sword of the Wizard King"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/tonikaku-kawaii-2"><img class="tile-image" src="https://media.kitsu.io/anime/45415/poster_image/large-3eb600c7623df1ff3c3a12610bd9d472.jpeg" alt="TONIKAWA: Over the Moon For You 2"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/mahoutsukai-no-yome-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/46436/poster_image/large-268b9d2c1e691a691cc2f26b9f2436a1.jpeg" alt="The Ancient Magus' Bride Season 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/mahoutsukai-no-yome-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/46436/poster_image/large-4143acc41341b91804009d0e7508dc60.jpeg" alt="The Ancient Magus' Bride Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/jujutsu-kaisen-2"><img class="tile-image" src="https://media.kitsu.io/anime/45857/poster_image/large-ffbdcf4570e0e9f4c5856b79f7f473bf.jpeg" alt="Jujutsu Kaisen Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tondemo-skill-de-isekai-hourou-meshi"><img class="tile-image" src="https://media.kitsu.io/anime/46676/poster_image/large-ac8c77c613ea90d3282cc2b87ea4aa6e.jpeg" alt="Campfire Cooking in Another World with My Absurd Skill"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/otonari-no-tenshisama-ni-itsunomanika-dame-ningen-ni-sareteita-Ken"><img class="tile-image" src="https://media.kitsu.io/anime/45715/poster_image/large-a32df4e0477c30b3616375baad3571e1.jpeg" alt="The Angel Next Door Spoils Me Rotten"></img></a>			
+							<a class="tile" href="https://kitsu.io/anime/otonari-no-tenshisama-ni-itsunomanika-dame-ningen-ni-sareteita-Ken"><img class="tile-image" src="https://media.kitsu.io/anime/45715/poster_image/large-d863bff0eb6e0e49b30da61229bbd598.jpeg" alt="The Angel Next Door Spoils Me Rotten"></img></a>			
 							<a class="tile" href="https://kitsu.io/anime/keikenzumi-na-kimi-to-keiken-zero-na-ore-ga-otsukiai-suru-hanashi"><img class="tile-image" src="https://media.kitsu.io/anime/46459/poster_image/large-5deef63ee92ae6942ea5b6c7b64d2c80.jpeg" alt="Our Dating Story"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/yumemiru-danshi-wa-genjitsushugisha"><img class="tile-image" src="https://media.kitsu.io/anime/46763/poster_image/large-7f95c2017517973c1be881c9819181a4.jpeg" alt="The Dreaming Boy Is a Realist"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/otonari-ni-ginga"><img class="tile-image" src="https://media.kitsu.io/anime/46083/poster_image/large-1c4d50e1a23672bdd8de12ac36886c8a.jpeg" alt="The Galaxy Next Door"></img></a>														
