--- a/index.html
+++ b/index.html
@@ -151,11 +151,7 @@
 					</div><!-- Binge Watching -->
 
 					<div class="watching-item"><!--Most Anticipated-->
-						<h2 class="section-heading">Most Anticipated</h2>				
-						<h3 class="section-subheading">Fall 2022 Dubs</h3> 
-						<div class="tiled-list scrolling-tiled-list">																							
-
-						</div><!-- tiled-list -->
+						<h2 class="section-heading">Most Anticipated</h2>
 						<h3 class="section-subheading">Later</h3> 
 						<div class="tiled-list scrolling-tiled-list">																																												
 							<a class="tile" href="https://kitsu.io/anime/solo-leveling"><img class="tile-image" src="https://media.kitsu.io/anime/46231/poster_image/large-ccc9ca358cc3dd829a1aadf614ca2f15.jpeg" alt="Solo Leveling"></img></a>							
@@ -636,15 +632,6 @@
 				</div>
 				<div class="lf-list">
 					<h3 class="lf-heading">The Dubs</h3>				
-					<a class="lf-link" href="https://www.english-dubbed.com/">
-						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/eng-dub-icon.png"></img>
-							<div class="lf-text">
-								<span class="lf-displayname">English Dubbed</span>
-								<span class="lf-handle"><i class="fas fa-link lf-handle-icon"></i> english-dubbed.com</span>
-							</div>
-						</div>
-					</a>			
 					<a class="lf-link" href="https://www.reddit.com/r/Animedubs/">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="https://styles.redditmedia.com/t5_2ur9o/styles/communityIcon_ctplq0oyuxp01.png"></img>
@@ -681,18 +668,18 @@
 							</div>
 						</div>
 					</a>						
-				</div>				
-				<div class="lf-list">
-					<h3 class="lf-heading">For Collections</h3>				
-					<a class="lf-link" href="https://www.english-dubbed.com/knowledge-bazaar/upcoming-english-dubbed-release-dates/">
+					<a class="lf-link" href="https://isthisdubbed.com/">
 						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/eng-dub-icon.png"></img>
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/isitdubbed-icon.png"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">BD/DVD Releases</span>
-								<span class="lf-handle"><i class="fas fa-link lf-handle-icon"></i> english-dubbed.com</span>
+								<span class="lf-displayname">Dub Checker</span>
+								<span class="lf-handle"><i class="fas fa-link lf-handle-icon"></i> isthisdubbed.com</span>
 							</div>
 						</div>
 					</a>			
+				</div>				
+				<div class="lf-list">
+					<h3 class="lf-heading">For Collections</h3>
 					<a class="lf-link" href="https://www.reddit.com/r/AnimeDeals/new/">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/animedeals-icon.png"></img>
