--- a/index.html
+++ b/index.html
@@ -593,6 +593,11 @@
 						<span class="lf-feature-source">Hidive News</span>						
 						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/hidive_winter2023_lineup.png"></img>
 					</a>
+					<a class="lf-feature-link" href="https://kitsu.io/posts/9731382">
+						<h3 class="lf-feature-title">Welcome to the 2022 Kitsu Anime Awards</h3>
+						<span class="lf-feature-source">Kitsu Events</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/kitsu-awards.png"></img>
+					</a>					
 					<a class="lf-feature-link" href="https://animeawards.moe/final-vote">
 						<h3 class="lf-feature-title">r/Anime Awards 2022</h3>
 						<span class="lf-feature-source">r/Anime</span>						
