--- a/index.html
+++ b/index.html
@@ -169,9 +169,6 @@
 							<a class="tile" href="https://kitsu.io/anime/kanojo-okarishimasu-3rd-season"><img class="tile-image" src="https://media.kitsu.io/anime/46489/poster_image/large-6057d9b8bb10422c0debfe1cfb036431.jpeg" alt="Rent-a-Girlfriend Season 3"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/bleach-sennen-kessen-hen-ketsubetsutan"><img class="tile-image" src="https://media.kitsu.io/anime/46903/poster_image/large-310e3967ba1578bce93d8c5e4dded8d1.jpeg" alt="BLEACH: Thousand Year Blood War - The Separation"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/jujutsu-kaisen-2"><img class="tile-image" src="https://media.kitsu.io/anime/45857/poster_image/large-ffbdcf4570e0e9f4c5856b79f7f473bf.jpeg" alt="Jujutsu Kaisen Season 2"></img></a>
-
-							<a class="tile" href=""><img class="tile-image" src="" alt=""></img></a>
-							<a class="tile" href=""><img class="tile-image" src="" alt=""></img></a>
 						</div><!-- tiled-list -->
 
 						<h3 class="section-subheading">Later</h3> 
@@ -760,6 +757,15 @@
 				</div>				
 				<div class="lf-list">
 					<h3 class="lf-heading">For Collections</h3>
+					<a class="lf-link" href="https://www.animenewsnetwork.com/encyclopedia/releases.php?format=video">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/ANN_Logo-icon.png"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Upcoming Releases</span>
+								<span class="lf-handle"><i class="fas fa-link lf-handle-icon"></i> animenewsnetwork.com</span>
+							</div>
+						</div>
+					</a>			
 					<a class="lf-link" href="https://www.reddit.com/r/AnimeDeals/new/">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/animedeals-icon.png"></img>
@@ -943,6 +949,36 @@
 							</div>
 						</div>
 					</a>	
+					<a class="lf-link more-lf-anipicstwitter" href="https://twitter.com/MiraiHikariArt">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-Mirai.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Mirai <span class="nsfw-tag">nsfw</span></span>
+								<span class="lf-handle"><i class="fab fa-twitter lf-handle-icon"></i> @MiraiHikariArt</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link more-lf-anipicstwitter" href="https://twitter.com/cutesexyrobutts">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-Cutesexyrobutts.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Cutesexyrobutts <span class="nsfw-tag">nsfw</span></span>
+								<span class="lf-handle"><i class="fab fa-twitter lf-handle-icon"></i> @cutesexyrobutts</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link more-lf-anipicstwitter" href="https://twitter.com/arachnart33">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-arachnart33.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">arachnart <span class="nsfw-tag">nsfw</span></span>
+								<span class="lf-handle"><i class="fab fa-twitter lf-handle-icon"></i> @arachnart33</span>
+							</div>
+						</div>
+					</a>
+
+
+					<!--
 					<a class="lf-link more-lf-anipicstwitter" href="https://twitter.com/mychristian2">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-mychristian2.jpg"></img>
@@ -979,24 +1015,6 @@
 							</div>
 						</div>
 					</a>					
-					<a class="lf-link more-lf-anipicstwitter" href="https://twitter.com/MiraiHikariArt">
-						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-Mirai.jpg"></img>
-							<div class="lf-text">
-								<span class="lf-displayname">Mirai <span class="nsfw-tag">nsfw</span></span>
-								<span class="lf-handle"><i class="fab fa-twitter lf-handle-icon"></i> @MiraiHikariArt</span>
-							</div>
-						</div>
-					</a>
-					<a class="lf-link more-lf-anipicstwitter" href="https://twitter.com/cutesexyrobutts">
-						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-Cutesexyrobutts.jpg"></img>
-							<div class="lf-text">
-								<span class="lf-displayname">Cutesexyrobutts <span class="nsfw-tag">nsfw</span></span>
-								<span class="lf-handle"><i class="fab fa-twitter lf-handle-icon"></i> @cutesexyrobutts</span>
-							</div>
-						</div>
-					</a>
 					<a class="lf-link more-lf-anipicstwitter" href="https://twitter.com/Enmanuelart20">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-Enmanuelart20.jpg"></img>
@@ -1012,15 +1030,6 @@
 							<div class="lf-text">
 								<span class="lf-displayname">Reine <span class="nsfw-tag">nsfw</span></span>
 								<span class="lf-handle"><i class="fab fa-twitter lf-handle-icon"></i> @FoxyReine</span>
-							</div>
-						</div>
-					</a>
-					<a class="lf-link more-lf-anipicstwitter" href="https://twitter.com/arachnart33">
-						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-arachnart33.jpg"></img>
-							<div class="lf-text">
-								<span class="lf-displayname">arachnart <span class="nsfw-tag">nsfw</span></span>
-								<span class="lf-handle"><i class="fab fa-twitter lf-handle-icon"></i> @arachnart33</span>
 							</div>
 						</div>
 					</a>
@@ -1069,6 +1078,8 @@
 							</div>
 						</div>
 					</a>
+
+					-->
 				</div><!-- Anipics on Twitter -->
 
 				<div class="lf-list">
@@ -1091,15 +1102,15 @@
 							</div>
 						</div>
 					</a>							
-					<a class="lf-link" href="https://www.reddit.com/r/Pixiv/">
+					<a class="lf-link" href="https://www.reddit.com/r/Pixivision/">
 						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="https://a.thumbs.redditmedia.com/odd9NxN0KHzNFc8jDhXnxIMb3MvhMaopilBqGq7NnW0.png"></img>
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/pixivision-icon.png"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">r/Pixiv</span>
-								<span class="lf-handle"><i class="fab fa-reddit-alien lf-handle-icon"></i> /r/Pixiv</span>
+								<span class="lf-displayname">r/Pixivision</span>
+								<span class="lf-handle"><i class="fab fa-reddit-alien lf-handle-icon"></i> /r/Pixivision</span>
 							</div>
 						</div>
-					</a>										
+					</a>								
 					<a class="lf-link" href="https://www.reddit.com/r/Animewallpaper/">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="https://styles.redditmedia.com/t5_2ss60/styles/communityIcon_bx5asf07hi711.png"></img>
@@ -1130,15 +1141,6 @@
 							</div>
 						</div>
 					</a>			
-					<a class="lf-link more-lf-anipicsreddit" href="https://www.reddit.com/r/awwcoholics/">
-						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/reddit-icon.jpg"></img>
-							<div class="lf-text">
-								<span class="lf-displayname">r/awwcoholics</span>
-								<span class="lf-handle"><i class="fab fa-reddit-alien lf-handle-icon"></i> /r/awwcoholics</span>
-							</div>
-						</div>
-					</a>		
 					<a class="lf-link more-lf-anipicsreddit" href="https://www.reddit.com/r/twintails/">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/reddit-icon.jpg"></img>
@@ -1166,6 +1168,36 @@
 							</div>
 						</div>
 					</a>
+					<a class="lf-link more-lf-anipicsreddit" href="https://www.reddit.com/r/BigAnimeTiddies/">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/BigAnimeTiddies-icon.png"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">r/BigAnimeTiddies <span class="nsfw-tag">nsfw</span></span>
+								<span class="lf-handle"><i class="fab fa-reddit-alien lf-handle-icon"></i> /r/BigAnimeTiddies</span>
+							</div>
+						</div>
+					</a>										
+					<!--
+						<a class="lf-link" href="https://www.reddit.com/r/Pixiv/">
+							<div class="lf-item-container">								
+								<img loading="Lazy" class="lf-image" src="https://a.thumbs.redditmedia.com/odd9NxN0KHzNFc8jDhXnxIMb3MvhMaopilBqGq7NnW0.png"></img>
+								<div class="lf-text">
+									<span class="lf-displayname">r/Pixiv</span>
+									<span class="lf-handle"><i class="fab fa-reddit-alien lf-handle-icon"></i> /r/Pixiv</span>
+								</div>
+							</div>
+						</a>										
+
+						<a class="lf-link more-lf-anipicsreddit" href="https://www.reddit.com/r/awwcoholics/">
+							<div class="lf-item-container">								
+								<img loading="Lazy" class="lf-image" src="assets/images/icons/reddit-icon.jpg"></img>
+								<div class="lf-text">
+									<span class="lf-displayname">r/awwcoholics</span>
+									<span class="lf-handle"><i class="fab fa-reddit-alien lf-handle-icon"></i> /r/awwcoholics</span>
+								</div>
+							</div>
+						</a>							
+					-->
 				</div><!-- Anipics on reddit -->
 			</div><!-- links and follows -->
 
