--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!--<link rel="stylesheet" type="text/css" href="assets/styles/MediaQuery-Reporter Styles.css">-->
 
 		<!--Scripts-->
-		
+
 		<!--Font Awesome Icons-->
 		<script src="https://kit.fontawesome.com/2ebfb1fd60.js" crossorigin="anonymous"></script>
 
@@ -932,7 +932,7 @@
 					</a>					
 				</div>
 				<div class="lf-list">
-					<h3 class="lf-heading">Podcasts</h3>								
+					<h3 class="lf-heading">Podcasts & Playlists</h3>								
 					<a class="lf-link" href="https://www.youtube.com/@TrashTaste">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-TrashTaste.jpg"></img>
@@ -951,25 +951,33 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://www.youtube.com/@anitrendz">
+					<a class="lf-link" href="https://open.spotify.com/playlist/37i9dQZF1DWT8aqnwgRt92?si=7f94ab8116dd44cf">
 						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-anitrendz.jpg"></img>
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/spotify-AnimeNow.jfif"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">Anime Trending</span>
-								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @anitrendz</span>
+								<span class="lf-displayname">Anime Now</span>
+								<span class="lf-handle"><i class="fa-brands fa-spotify lf-handle-icon"></i> @Spotify</span>
 							</div>
 						</div>
 					</a>
-						<a class="lf-link" href="">
-							<div class="lf-item-container">								
-								<img loading="Lazy" class="lf-image" src=""></img>
-								<div class="lf-text">
-									<span class="lf-displayname"></span>
-									<span class="lf-handle"><i class="fa-brands fa-spotify lf-handle-icon"></i> @TrashTaste</span>
-								</div>
+					<a class="lf-link" href="https://open.spotify.com/playlist/37i9dQZF1DX0hAXqBDwvwI?si=4edc8e97c8514e2a">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/spotify-AnimeOnReplay.jfif"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Anime On Replay</span>
+								<span class="lf-handle"><i class="fa-brands fa-spotify lf-handle-icon"></i> @Spotify</span>
 							</div>
-						</a>			
-		
+						</div>
+					</a>
+					<a class="lf-link" href="https://open.spotify.com/playlist/0QUHILqGzZ0Hp8JOAIVxLX?si=f82484fec2934f64">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/spotify-anime.jfif"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Anime</span>
+								<span class="lf-handle"><i class="fa-brands fa-spotify lf-handle-icon"></i> @Andrew King</span>
+							</div>
+						</div>
+					</a>		
 				</div>				
 				<div class="lf-list">
 					<h3 class="lf-heading">Twitter Fanart</h3>							
