--- a/index.html
+++ b/index.html
@@ -152,15 +152,18 @@
 							<a class="tile" href="https://kitsu.io/anime/edens-zero-2"><img class="tile-image" src="https://media.kitsu.io/anime/45847/poster_image/large-7b65c3ba6e29f80325c1ebab38dc964a.jpeg" alt="Edens Zero 2nd Season"></img></a>														
 							<a class="tile" href="https://kitsu.io/anime/ousama-ranking-yuuki-no-takarabako"><img class="tile-image" src="https://media.kitsu.io/anime/46317/poster_image/large-4604d11f71b9652e9f39ef679a3484a5.jpeg" alt="Ranking of Kings: Treasure Chest of Courage"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/jigokuraku"><img class="tile-image" src="https://media.kitsu.io/anime/44012/poster_image/large-a82dcf6cbdfd5217530236ae5d8b100f.jpeg" alt="Hell's Paradise"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/skip-to-loafer"><img class="tile-image" src="https://media.kitsu.io/anime/45520/poster_image/large-bc121442f312da08b24f1a56e2cb2040.jpeg" alt="Skip and Loafer"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kaminaki-sekai-no-kamisama-katsudou"><img class="tile-image" src="https://media.kitsu.io/anime/46089/poster_image/large-44e1b13d5835952d3cfe4c2a7df68f84.jpeg" alt="What God Does in a World Without Gods"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/my-home-hero"><img class="tile-image" src="https://media.kitsu.io/anime/46209/poster_image/large-e6ed88832d387593e867b7bd44091c81.jpeg" alt="My Home Hero"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/kimi-wa-houkago-insomnia"><img class="tile-image" src="https://media.kitsu.io/anime/45746/poster_image/large-45e04c601dd80245037ab7b8ec5a0c4a.jpeg" alt="Insomniacs After School"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kimi-wa-houkago-insomnia"><img class="tile-image" src="https://media.kitsu.io/anime/45746/poster_image/large-45e04c601dd80245037ab7b8ec5a0c4a.jpeg" alt="Insomniacs After School"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/yamada-kun-to-lv999-no-koi-wo-suru"><img class="tile-image" src="https://media.kitsu.io/anime/46529/poster_image/large-88e6c2a6d1f806960f8fce74cfeb66fa.jpeg" alt="Loving Yamada at LV999!"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/oshi-no-ko"><img class="tile-image" src="https://media.kitsu.io/anime/46170/poster_image/large-9ce502e0a1393884071d1a14e9b07602.jpeg" alt="OSHI NO KO"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/mashle"><img class="tile-image" src="https://media.kitsu.io/anime/46229/poster_image/large-0089799807bf6cc3579a183b8338d789.jpeg" alt="Mashle"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/watashi-no-yuri-wa-oshigoto-desu"><img class="tile-image" src="https://media.kitsu.io/anime/46116/poster_image/large-f5b630a01e3925aca1e92412d313e2d4.jpeg" alt="Yuri Is My Job!"></img></a>
+							
 
 							<!--
+								<a class="tile" href="https://kitsu.io/anime/watashi-no-yuri-wa-oshigoto-desu"><img class="tile-image" src="https://media.kitsu.io/anime/46116/poster_image/large-f5b630a01e3925aca1e92412d313e2d4.jpeg" alt="Yuri Is My Job!"></img></a>
+
 								<a class="tile" href="https://kitsu.io/anime/isekai-wa-smartphone-to-tomo-ni-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/46057/poster_image/large-53012f56d869648d430fe1e22fbbfd06.jpeg" alt="In Another World With My Smartphone Season 2"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/shingeki-no-kyojin-the-final-season-part-3"><img class="tile-image" src="https://media.kitsu.io/anime/46038/poster_image/large-1ea5c5a1d7cb07795bee8f22be9a95ef.jpeg" alt="Attack on Titan: The Final Season Part 3"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/psycho-pass-providence"><img class="tile-image" src="https://media.kitsu.io/anime/46358/poster_image/large-d5840e17691bce71e22567b1498628f0.jpeg" alt="Psycho-Pass: Providence"></img></a>
